Fix: Add handling of item without delivery data